[tool.poetry]
name = "legi.py"
version = "0.0.0"
description = "Tools to work with the database of French laws (LEGI)"
authors = ["Changaco <changaco@changaco.oy.lc>"]
homepage = "https://github.com/Legilibre/legi.py"
repository = "https://github.com/Legilibre/legi.py"
readme = "README.md"
keywords = ["legi", "law", "france"]
license = "CC0-1.0"
packages = [
    { include = "legi" },
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"
requests = "^2.27.1"
appdirs = "^1.4.4"
libarchive-c = "^4.0"
tqdm = {version = "^4.64.0", optional = true}
hunspell = {version = "^0.5.5", optional = true}

[tool.poetry.extras]
progressbar = ["tqdm"]
spellchecking = ["hunspell"]

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
legi-download = 'legi.download:main'
legi-tar2sqlite = 'legi.tar2sqlite:main'
legi-normalize = 'legi.normalize:main'
legi-factorize = 'legi.factorize:main'
legi-html = 'legi.html:main'
legi-anomalies = 'legi.anomalies:main'

[tool.poe.tasks]
test-unit = "pytest tests -Wd --cov=legi --cov-report=term-missing tests"
test-doctest = "pytest --doctest-modules legi"
test = ["test-unit", "test-doctest"]
check = "flake8"
